--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
       <h3>Skills</h3>
       <p>Testing website</p>
       <ul>
-        <li>HTML & CSS</li>
-        
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JS</li>
       
       </ul>
     </div>
@@ -51,6 +52,7 @@
     <div class="content-wrapper">
       <h3>exampel</h3>
       <p>portfolio ini dibuat menggunakan html & css</p>
+      <div class="sticker" id="stiker"></div>
     </div>
   </div>
 
